# rllab-curriculum

./: .dockerignore  .gitignore  .gitmodules  18-01-train_snn_old_v0  20160726_test_hashing.ipynb  CHANGELOG.md  CrossEntropyDivg.ipynb  GradLQR.ipynb  ILQG.ipynb  MUJOCO_LOG.TXT  README.md  SQP.ipynb  SQP.py  baseline.ipynb  bash_kill.bsh  bimodalReward.ipynb  bimodalReward_old.ipynb  circle.yml  deep_q_rl  environment.yml  lbfgs.py  log  parallel.ipynb  project_setup.bash  requirements.txt  run_experiment.py  runs  setup.py  setup_linux.sh  simple_nn_policy.py  sqp.prof.REMOVED.git-id  sync.bs  test.py  test_cem.py  test_cgt.py  test_ilqg.py  test_sqp.py  todo.md  track_changes.ipynb  trfqi.ipynb  (+4 more)
algo/: __init__.py  bpfqi.py  cem.py  dqn.py  ilqg.py  ilqr.py  pfqi.py  ppo.py  remote_sampler.py  rollout_sampler.py  sampler.py  sqp.py  trpo.py  utrpo.py  utrpo_cont.py  utrpo_vts.py
cgtcompat/: __init__.py  config.py  gradient.py  tensor.py
core/: serializable.py
docker/: .dockerignore  Dockerfile  Dockerfile2  gpu_Dockerfile  gpu_Dockerfile2  gpu_tf_Dockerfile  gpu_tf_Dockerfile2
docs/: index.rst
examples/: .trpo_point.py.swp  bimod_env.py  cluster_demo.py  nop_cartpole.py  point_env.py  point_mdp.py  train_bimod.py  trpo_bimod.py  trpo_cartpole.py  trpo_cartpole_log.py  trpo_cartpole_pickled.py  trpo_cartpole_recurrent.py  trpo_cartpole_stub.py  trpo_hopper.py  trpo_point.py  vpg_1.py  vpg_2.py
experiments/: test.py  train_acrobot_ppo.py  train_ant_ppo.py  train_atari_dqn.py  train_atari_pfqi.py  train_atari_ppo.py  train_cartpole_ilqg.py  train_cartpole_sqp.py  train_frozen_lake_bpfqi.py  train_frozen_lake_pfqi.py  train_frozen_lake_ppo.py  train_gripper_ilqg.py  train_gripper_vgps.py  train_hopper_ppo.py  train_igor_hopper_ppo.py  train_john_mjc_walker_ppo.py  train_locomotion_cem.py  train_locomotion_sqp.py  train_swimmer_cem.py  train_swimmer_ilqg.py  train_swimmer_ppo.py  train_swimmer_sqp.py  train_swimmer_vpg.py  train_walker_ppo.py
lua/: ProFi.lua  cartpole_mdp.lua  client_mdp.lua  debugger.lua  main.lua  nn_policy.lua  nn_q_function.lua  ou_strategy.lua  replay_pool.lua  utils.lua
mdp/: __init__.py  atari_mdp.py  base.py  cartpole_mdp.py  (+10 more)
src/: CMakeLists.txt
src/Boost.NumPy/: CMakeLists.txt
src/cmake/: FindEigen.cmake  FindGLUT.cmake  FindOpenGL.cmake
(+5699 files in other folders)
